changes-from-new-branch

--- a/src/app/child1/child1.component.html
+++ b/src/app/child1/child1.component.html
@@ -1,5 +1,5 @@
 <p>Child1 works!</p>
-My name was {{name}}
+My name is {{name}}
 <input type="text" [(ngModel)]="name">
 <button (click)="emitchgedNM(name)"> emit chgedNM</button>
 
