--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,4 +1,7 @@
-LandingPage<br/>
+<label>LandingPage</label><br/>
 <button>This is button</button>
 <body>{{text}}</body>
 <p>This is para</p>
+
+<label for="txtcomments">Enter comments</label>
+<input type="text">
